syntax = "proto3";

package memberships;

service MembershipsService {
    rpc CreateMembership (CreateMembershipDto) returns (Membership) {}
    rpc FindByCompanyId (FindMembershipByCompanyDto) returns (Membership) {}
}
service MembershipsPaymentService {
    rpc CreateMembershipPayment (CreateMembershipPaymentDto) returns (MembershipPayment) {}
}

service MembershipsLevelService {
    rpc FindByName (FindMembershipsLevelByNameDto) returns (MembershipLevel) {}
}

message Membership {
    string id = 1;
    string membershipLevelName = 2;
    string companyId = 3;
    string startDate = 4;
    string endDate = 5;
    string status = 6;
}

message MembershipLevel {
    string id = 1;
    string name = 2;
    repeated Benefit benefits = 3;
}

message MembershipPayment {
    string id = 1;
    int64 amount = 2;
    string paymentDate = 3;
    string paymentMethod = 4;
}

message Benefit {
    string name = 1;
    string value = 2;
}

message CreateMembershipDto {
    string membershipLevelName = 1;
    string companyId = 2;
    string startDate = 3;
    string endDate = 4;
}

message CreateMembershipPaymentDto {
    string membershipId = 1;
    int64 amount = 2;
    string paymentDate = 3;
    string paymentMethod = 4;
}

message FindMembershipByCompanyDto {
    string companyId = 1;
}

message FindMembershipsLevelByNameDto {
    string name = 1;
}